# T-Scope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
artifacts/component/: component.xml
artifacts/component/doc/: ReleaseNotes.txt
artifacts/component/drivers/tTest_v1_0/data/: tTest.mdd  tTest.yaml
artifacts/component/drivers/tTest_v1_0/src/: CMakeLists.txt  xttest.h  xttest_hw.h
artifacts/component/drivers/tTest_v1_1/data/: tTest.mdd  tTest.tcl
artifacts/component/drivers/tTest_v1_1/src/: xttest_linux.c
artifacts/component/drivers/tTest_v1_2/data/: tTest.mdd
artifacts/component/drivers/tTest_v1_2/src/: Makefile  xttest.c  xttest_sinit.c
artifacts/component/hdl/ip/: tTest_dsqrt_64ns_64ns_64_57_no_dsp_1_ip.v
artifacts/component/hdl/verilog/: tTest.v  tTest_Block_entry2347_proc6.v  tTest_Block_entry2347_proc6_Pipeline_VITIS_LOOP_35_1.v  tTest_Block_entry2347_proc6_Pipeline_VITIS_LOOP_35_11.v  tTest_Block_entry2458_proc.v  tTest_control_s_axi.v  tTest_diff.v  tTest_divVal_ap_ufixed_63_55_5_3_0_ap_ufixed_23_15_5_3_0_3.v  tTest_divVal_ap_ufixed_63_55_5_3_0_ap_ufixed_23_15_5_3_0_s.v  tTest_divVal_ap_uint_47_ap_ufixed_16_8_5_3_0_1.v  tTest_divVal_ap_uint_47_ap_ufixed_16_8_5_3_0_s.v  tTest_dsqrt_64ns_64ns_64_57_no_dsp_1.v  tTest_entry_proc.v  tTest_entry_proc37.v  tTest_entry_proc38.v  tTest_famA_RAM_1WNR_BRAM_1R1W.v  tTest_famA_RAM_1WNR_BRAM_1R1W_memcore.v  tTest_fifo_w16_d2_S.v  tTest_fifo_w16_d3_S.v  tTest_fifo_w23_d2_S.v  tTest_fifo_w23_d2_S_x.v  tTest_fifo_w32_d2_S.v  tTest_fifo_w32_d3_S.v  tTest_fifo_w32_d7_S.v  tTest_fifo_w40_d2_S.v  tTest_fifo_w40_d2_S_x.v  tTest_fifo_w40_d2_S_x0.v  tTest_fifo_w40_d3_S.v  tTest_fifo_w40_d3_S_x.v  tTest_fifo_w40_d3_S_x0.v  tTest_fifo_w47_d2_S.v  tTest_fifo_w63_d2_S.v  tTest_fifo_w63_d3_S.v  tTest_fifo_w63_d3_S_x.v  tTest_flow_control_loop_delay_pipe.v  tTest_flow_control_loop_pipe.v  tTest_flow_control_loop_pipe_sequential_init.v  tTest_gmem_m_axi.v  tTest_hls_deadlock_detection_unit.v  tTest_hls_deadlock_detector.vh  (+34 more)
artifacts/component/hdl/vhdl/: tTest.vhd  tTest_Block_entry2347_proc6.vhd  tTest_Block_entry2347_proc6_Pipeline_VITIS_LOOP_35_1.vhd  tTest_Block_entry2347_proc6_Pipeline_VITIS_LOOP_35_11.vhd  tTest_Block_entry2458_proc.vhd  tTest_control_s_axi.vhd  tTest_diff.vhd  tTest_divVal_ap_ufixed_63_55_5_3_0_ap_ufixed_23_15_5_3_0_3.vhd  tTest_divVal_ap_ufixed_63_55_5_3_0_ap_ufixed_23_15_5_3_0_s.vhd  tTest_divVal_ap_uint_47_ap_ufixed_16_8_5_3_0_1.vhd  tTest_divVal_ap_uint_47_ap_ufixed_16_8_5_3_0_s.vhd  tTest_dsqrt_64ns_64ns_64_57_no_dsp_1.vhd  tTest_entry_proc.vhd  tTest_entry_proc37.vhd  tTest_entry_proc38.vhd  tTest_famA_RAM_1WNR_BRAM_1R1W.vhd  tTest_famA_RAM_1WNR_BRAM_1R1W_memcore.vhd  tTest_fifo_w16_d2_S.vhd  tTest_fifo_w16_d3_S.vhd  tTest_fifo_w23_d2_S.vhd  tTest_fifo_w23_d2_S_x.vhd  tTest_fifo_w32_d2_S.vhd  tTest_fifo_w32_d3_S.vhd  tTest_fifo_w32_d7_S.vhd  tTest_fifo_w40_d2_S.vhd  tTest_fifo_w40_d2_S_x.vhd  tTest_fifo_w40_d2_S_x0.vhd  tTest_fifo_w40_d3_S.vhd  tTest_fifo_w40_d3_S_x.vhd  tTest_fifo_w40_d3_S_x0.vhd  tTest_fifo_w47_d2_S.vhd  tTest_fifo_w63_d2_S.vhd  tTest_fifo_w63_d3_S.vhd  tTest_fifo_w63_d3_S_x.vhd  tTest_flow_control_loop_delay_pipe.vhd  tTest_flow_control_loop_pipe.vhd  tTest_flow_control_loop_pipe_sequential_init.vhd  tTest_gmem_m_axi.vhd  tTest_mul_17s_17s_32_1_1.vhd  tTest_mul_23ns_23ns_46_1_1.vhd  (+29 more)
artifacts/overlay/: tTestCore.bit  tTestCore.hwh  tTestCore.tcl
documentation/: PYNQ_setup.md  building_victim_firmware.md  getting_sysroot.md
experiments/: overlayTest.ipynb
histogram/: CMakeLists.txt  histogram.hpp
histogram/python/: CMakeLists.txt  bindings.cpp
histogram/src/: histogram.cpp  histogram.hpp
performance_testing/: collector_throughput.py
scripts/: collector_throughput.py  realtime_scope.py  tvla_performance.py
src/: CMakeLists.txt
src/cmake/: packing.cmake
src/histogram/: CMakeLists.txt  bindings.cpp  histogram.cpp  histogram.hpp
src/histogram/pyHistogram/: __init__.py  __init__.pyi
src/histogram/tests/: CMakeLists.txt  decimate_test.cpp  scale_test.cpp  trace_collection_test.cpp  trace_length_test.cpp
src/python/: CMakeLists.txt
src/python/pyTVLA/: __init__.py  aes.py  datasource.py  engine.py  memory.py  pynq.py  pynq_engine.py  scheduler.py  storage.py  types.py
src/python/pyTVLA/overlay/: tTestCore.bit  tTestCore.hwh  tTestCore.tcl
src/python/scripts/: CMakeLists.txt  core_performance.py  realtime_scope.py  realtime_scope_viewer.py  show_aes_trace.py  tvla_performance.py  upload_cw_firmware.py
src/python_bindings/: CMakeLists.txt  bindings.cpp
src/ttest/: core_test.cpp  core_test.h  tTest.cpp  tTest.h  tTestTest.cpp  tTestVectors.h  ttest_config.cfg  types.h  vitis-comp.json
toolchains/: linux.cmake  native.cmake  pynq.cmake
