install(PROGRAMS collector_throughput.py DESTINATION bin RENAME collector_throughput)
install(PROGRAMS realtime_scope.py DESTINATION bin RENAME realtime_scope)
install(PROGRAMS tvla_performance.py DESTINATION bin RENAME tvla_performance)
install(PROGRAMS upload_cw_firmware.py DESTINATION bin RENAME upload_cw_firmware)
